fix safe areas on mobile

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -82,7 +82,7 @@
 }
 
 .glass-s-black{
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.7);
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(15px);
 	-webkit-backdrop-filter: blur(15px);
@@ -148,4 +148,11 @@
 	to {
 		-webkit-transform: translate3d(1000px, 0px, 0px);
 	}
+}
+
+.safe-area-padding {
+	padding-left: env(safe-area-inset-left);
+	padding-right: env(safe-area-inset-right);
+	padding-top: env(safe-area-inset-top);
+	padding-bottom: env(safe-area-inset-bottom);
 }
